add content-disposition override to s3urlbuilder and improve javadoc